# SynapseOMS

./: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md
risk-engine/: Dockerfile  pyproject.toml
risk-engine/risk_engine/: __init__.py  main.py  metrics.py
risk-engine/risk_engine/anomaly/: consumer.py  detector.py
risk-engine/risk_engine/concentration/: __init__.py  analyzer.py
risk-engine/risk_engine/db/: hydrate.py
risk-engine/risk_engine/domain/: __init__.py  instrument.py  portfolio.py  position.py  risk_result.py
risk-engine/risk_engine/greeks/: __init__.py  calculator.py
risk-engine/risk_engine/grpc_server/: __init__.py  server.py
risk-engine/risk_engine/kafka/: __init__.py  consumer.py
risk-engine/risk_engine/optimizer/: __init__.py  constraints.py  mean_variance.py
risk-engine/risk_engine/rest/: __init__.py  router_ai.py  router_anomaly.py  router_optimizer.py  router_risk.py  router_scenario.py
risk-engine/risk_engine/settlement/: __init__.py  tracker.py
risk-engine/risk_engine/timeseries/: __init__.py  covariance.py  regime.py  statistics.py
risk-engine/tests/: conftest.py  test_anomaly_consumer.py  test_anomaly_detector.py  test_concentration.py  test_consumer_exec_trigger.py  test_greeks.py  test_grpc_server.py  test_hydrate.py  test_kafka_consumer.py  test_metrics.py  test_optimizer.py  test_portfolio.py  test_regime.py  test_rest_ai.py  test_rest_anomaly.py  test_rest_optimizer.py  test_rest_router.py  test_rest_scenario.py  test_settlement.py  test_var_historical.py  test_var_monte_carlo.py  test_var_parametric.py
(+296 files in other folders)
