[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-engine"
version = "0.1.0"
description = "SynapseOMS Risk Engine — real-time portfolio risk management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "grpcio>=1.64",
    "grpcio-tools>=1.64",
    "confluent-kafka>=2.4",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "cvxpy>=1.5",
    "scikit-learn>=1.5",
    "asyncpg>=0.29",
    "redis>=5.0",
    "protobuf>=5.27",
    "prometheus-client>=0.20",
    "structlog>=24.2",
    "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["risk_engine*"]
